         resize the outer window, which might result in a smaller window overall.
         or something like that. guys, send me a patch.
WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

9.0
	- fix a crash bug where urxvtd would crash when urxvtc was called
          with wrong arguments (I wish debian maintainers in general would
          report bugs and their proposed fixes to the original package maintaienrs
          instead of sitting on them for good measure to see if anybody notices).
        - check for refresh after initialising to avoid staying blank
          till the first event arrives. or so.
	- continuously update transparency while moving/resizing now.
	- scrollbar code cleanups.
        - cub1 now acts as advertised (and ignores the "wrapped" state).
        - the 132/80 mode switch now forces a height of 24, too, and
          resets the terminal.

8.9  Mon Dec 24 07:51:40 CET 2007
	- fix the issue where urxvtd would not immediately close a window
          when the command exited but only on the next X event.
        - changed terminfo file not to use application keypad mode.
        - fix the issue where making a selection in one urxvtd window
          would not clear it visually in another.
        - fix an issue of urxvt not getting background pixmap updates
          and flickering after bg pixmap changes (reported by Mikachu).
	- fix redraw bug in xterm scrollbar with -sr (reported by Mikachu).
        - correctly provide dependencies for libev (µikachu).
        - minor code reorganisations and cleanups.
        - be more robust in case the urxvt-popup extension cannot be loaded.

8.8  Sat Dec 15 19:40:39 CET 2007
        - option -C was aliased to all unsupported options, activating
          options that shouldn't be compiled in, leading to interesting
          effects.